--- a/src/app/sales-person-list/sales-person-list.component.html
+++ b/src/app/sales-person-list/sales-person-list.component.html
@@ -1,1 +1,26 @@
 <p>sales-person-list works!</p>
+
+<p>
+    {{salesPersonsList[0].firstName}}
+</p>
+
+<table border="1">
+    <thead>
+        <tr>
+            <th>first name</th>
+            <th>last name</th>
+            <th>email</th>
+            <th>sales volume</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!--*ngFor is a for each loop -->
+        <tr *ngFor="let sp of salesPersonsList">
+            <td>{{sp.firstName}}</td>
+            <td>{{sp.lastName}}</td>
+            <td>{{sp.email}}</td>
+            <td>{{sp.salesVolume}}</td>
+
+        </tr>
+    </tbody>
+</table>
