--- a/src/app/sales-person-list/sales-person-list.component.html
+++ b/src/app/sales-person-list/sales-person-list.component.html
@@ -4,8 +4,8 @@
     {{salesPersonsList[0].firstName}}
 </p>
 
-<table border="1">
-    <thead>
+<table class="table table-hover">
+    <thead class="table-dark">
         <tr>
             <th>first name</th>
             <th>last name</th>
