--- a/src/app/sales-person-list/sales-person-list.component.html
+++ b/src/app/sales-person-list/sales-person-list.component.html
@@ -11,6 +11,7 @@
             <th>last name</th>
             <th>email</th>
             <th>sales volume</th>
+            <th>met quota?</th>
         </tr>
     </thead>
     <tbody>
@@ -19,7 +20,12 @@
             <td>{{sp.firstName}}</td>
             <td>{{sp.lastName}}</td>
             <td>{{sp.email}}</td>
-            <td>{{sp.salesVolume}}</td>
+            <td>{{sp.salesVolume | currency: 'EUR'}}</td>
+            <td>
+                <div *ngIf="sp.salesVolume > 300; else myElseBlock">yes
+                </div>
+                 <ng-template #myElseBlock> no </ng-template>
+            </td>
 
         </tr>
     </tbody>
